Readme fixes and updates
Fixed CLI documentation errors
Added basic documentation for python interface

--- a/Python_Interface_Example.ipynb
+++ b/Python_Interface_Example.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# utils contains configuration and scripts to interface with the Twitter API\n",
     "# PullTwitterAPI is the full python interface for the package\n",
-    "from pull_twitter_api import utils, PullTwitterAPI\n",
+    "from pull_twitter_api import TwitterPullConfig, PullTwitterAPI\n",
     "\n",
     "import os\n",
     "import twitteralchemy as twalc"
@@ -33,6 +33,15 @@
    "metadata": {},
    "source": [
     "Config for the api queries can either be passed as a file path to a yaml file, or as a TwitterPullConfig  object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TwitterPullConfig.from_file?"
    ]
   },
   {
