Added Tweet Lookup Subcommand

--- a/Python_Interface_Example.ipynb
+++ b/Python_Interface_Example.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = './configs/timeline_config_ex.yaml'"
+    "# config_path = './configs/timeline_config_ex.yaml'"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pt_api = PullTwitterAPI(config_path = config_path)"
+    "# pt_api = PullTwitterAPI(config_path = config_path)"
    ]
   },
   {
@@ -90,11 +90,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "handle_csv = './data/celeb_handle_test_short.csv'"
+    "handle_csv = './data/celeb_handle_test_short.csv'\n",
+    "id_csv     = './data/celeb_id_test.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lookup Example "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lu_config = './configs/search_config_ex.yaml'\n",
+    "pt_api = PullTwitterAPI(config_path = lu_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving results to  C:\\Users\\ndeas\\Documents\\GitHub\\twitter_timeline\\data\\celeb_output_test/lookup/2022-02-10 10.03.46\n",
+      "Pulling tweet results for 19 ids.\n",
+      "Collected 19 tweets"
+     ]
+    }
+   ],
+   "source": [
+    "response = pt_api.lookup(id_csv = id_csv,\n",
+    "                id_col = 'id', auto_save = True)"
    ]
   },
   {
@@ -113,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -204,10 +242,10 @@
        "      <td>2022-01-24 20:40:59+00:00</td>\n",
        "      <td>17919972</td>\n",
        "      <td>en</td>\n",
-       "      <td>85183</td>\n",
-       "      <td>11074</td>\n",
-       "      <td>712788</td>\n",
-       "      <td>39602</td>\n",
+       "      <td>85184</td>\n",
+       "      <td>11082</td>\n",
+       "      <td>712933</td>\n",
+       "      <td>39604</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -221,10 +259,10 @@
        "      <td>2022-01-24 20:40:58+00:00</td>\n",
        "      <td>531750633</td>\n",
        "      <td>en</td>\n",
-       "      <td>117168</td>\n",
-       "      <td>21846</td>\n",
-       "      <td>727437</td>\n",
-       "      <td>56331</td>\n",
+       "      <td>117159</td>\n",
+       "      <td>21855</td>\n",
+       "      <td>727525</td>\n",
+       "      <td>56340</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -238,10 +276,10 @@
        "      <td>2021-12-13 21:31:35+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
-       "      <td>104164</td>\n",
-       "      <td>31865</td>\n",
-       "      <td>612781</td>\n",
-       "      <td>22540</td>\n",
+       "      <td>104161</td>\n",
+       "      <td>31860</td>\n",
+       "      <td>612858</td>\n",
+       "      <td>22541</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -255,10 +293,10 @@
        "      <td>2021-11-23 22:45:00+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
-       "      <td>84397</td>\n",
+       "      <td>84395</td>\n",
        "      <td>13627</td>\n",
-       "      <td>404787</td>\n",
-       "      <td>23397</td>\n",
+       "      <td>404821</td>\n",
+       "      <td>23401</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -273,9 +311,9 @@
        "      <td>17919972</td>\n",
        "      <td>en</td>\n",
        "      <td>13792</td>\n",
-       "      <td>1066</td>\n",
-       "      <td>169517</td>\n",
-       "      <td>381</td>\n",
+       "      <td>1068</td>\n",
+       "      <td>169536</td>\n",
+       "      <td>380</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -306,9 +344,9 @@
        "      <td>2017-08-25 03:32:03+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
-       "      <td>58896</td>\n",
+       "      <td>58892</td>\n",
        "      <td>6071</td>\n",
-       "      <td>154687</td>\n",
+       "      <td>154784</td>\n",
        "      <td>11152</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
@@ -323,9 +361,9 @@
        "      <td>2017-08-23 16:49:01+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>und</td>\n",
-       "      <td>142865</td>\n",
-       "      <td>16966</td>\n",
-       "      <td>354565</td>\n",
+       "      <td>142856</td>\n",
+       "      <td>16963</td>\n",
+       "      <td>354735</td>\n",
        "      <td>58857</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
@@ -340,9 +378,9 @@
        "      <td>2017-08-23 14:02:23+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>und</td>\n",
-       "      <td>48923</td>\n",
-       "      <td>7802</td>\n",
-       "      <td>161014</td>\n",
+       "      <td>48922</td>\n",
+       "      <td>7800</td>\n",
+       "      <td>161127</td>\n",
        "      <td>19786</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
@@ -357,10 +395,10 @@
        "      <td>2017-08-22 15:02:19+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>und</td>\n",
-       "      <td>44290</td>\n",
-       "      <td>7718</td>\n",
-       "      <td>146387</td>\n",
-       "      <td>13803</td>\n",
+       "      <td>44286</td>\n",
+       "      <td>7716</td>\n",
+       "      <td>146479</td>\n",
+       "      <td>13804</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -374,10 +412,10 @@
        "      <td>2017-08-21 15:00:54+00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>und</td>\n",
-       "      <td>67392</td>\n",
-       "      <td>18839</td>\n",
-       "      <td>202197</td>\n",
-       "      <td>41045</td>\n",
+       "      <td>67387</td>\n",
+       "      <td>18838</td>\n",
+       "      <td>202367</td>\n",
+       "      <td>41044</td>\n",
        "      <td>False</td>\n",
        "      <td>everyone</td>\n",
        "      <td>Twitter for iPhone</td>\n",
@@ -415,43 +453,43 @@
        "15  17919972   899647503859032065 2017-08-21 15:00:54+00:00   \n",
        "\n",
        "   in_reply_to_user_id lang  public_metrics_retweet_count  \\\n",
-       "0             17919972   en                         85183   \n",
-       "1            531750633   en                        117168   \n",
-       "2                 None   en                        104164   \n",
-       "3                 None   en                         84397   \n",
+       "0             17919972   en                         85184   \n",
+       "1            531750633   en                        117159   \n",
+       "2                 None   en                        104161   \n",
+       "3                 None   en                         84395   \n",
        "4             17919972   en                         13792   \n",
        "..                 ...  ...                           ...   \n",
-       "11                None   en                         58896   \n",
-       "12                None  und                        142865   \n",
-       "13                None  und                         48923   \n",
-       "14                None  und                         44290   \n",
-       "15                None  und                         67392   \n",
+       "11                None   en                         58892   \n",
+       "12                None  und                        142856   \n",
+       "13                None  und                         48922   \n",
+       "14                None  und                         44286   \n",
+       "15                None  und                         67387   \n",
        "\n",
        "    public_metrics_reply_count  public_metrics_like_count  \\\n",
-       "0                        11074                     712788   \n",
-       "1                        21846                     727437   \n",
-       "2                        31865                     612781   \n",
-       "3                        13627                     404787   \n",
-       "4                         1066                     169517   \n",
+       "0                        11082                     712933   \n",
+       "1                        21855                     727525   \n",
+       "2                        31860                     612858   \n",
+       "3                        13627                     404821   \n",
+       "4                         1068                     169536   \n",
        "..                         ...                        ...   \n",
-       "11                        6071                     154687   \n",
-       "12                       16966                     354565   \n",
-       "13                        7802                     161014   \n",
-       "14                        7718                     146387   \n",
-       "15                       18839                     202197   \n",
+       "11                        6071                     154784   \n",
+       "12                       16963                     354735   \n",
+       "13                        7800                     161127   \n",
+       "14                        7716                     146479   \n",
+       "15                       18838                     202367   \n",
        "\n",
        "    public_metrics_quote_count  possibly_sensitive reply_settings  \\\n",
-       "0                        39602               False       everyone   \n",
-       "1                        56331               False       everyone   \n",
-       "2                        22540               False       everyone   \n",
-       "3                        23397               False       everyone   \n",
-       "4                          381               False       everyone   \n",
+       "0                        39604               False       everyone   \n",
+       "1                        56340               False       everyone   \n",
+       "2                        22541               False       everyone   \n",
+       "3                        23401               False       everyone   \n",
+       "4                          380               False       everyone   \n",
        "..                         ...                 ...            ...   \n",
        "11                       11152               False       everyone   \n",
        "12                       58857               False       everyone   \n",
        "13                       19786               False       everyone   \n",
-       "14                       13803               False       everyone   \n",
-       "15                       41045               False       everyone   \n",
+       "14                       13804               False       everyone   \n",
+       "15                       41044               False       everyone   \n",
        "\n",
        "                source  \n",
        "0   Twitter for iPhone  \n",
@@ -469,7 +507,7 @@
        "[716 rows x 14 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
