ReadMe Updates and Code Cleanup
Updated ReadMe with lookup subcommand
TwitterPullConfig -> PullTwitterConfig for consistency
Skip column for lookup
Consolidated config file parsing (filter out extraneous parameters in api)

--- a/Python_Interface_Example.ipynb
+++ b/Python_Interface_Example.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,19 +214,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving results to  C:\\Users\\ndeas\\Documents\\GitHub\\twitter_timeline\\data\\celeb_output_test/timeline/2022-02-09 12.55.21\n"
+      "Saving results to  C:\\Users\\ndeas\\Documents\\GitHub\\twitter_timeline\\data\\celeb_output_test/timeline/2022-02-16 12.59.06\n"
      ]
     }
    ],
    "source": [
     "response.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving results to  C:\\Users\\ndeas\\Documents\\GitHub\\twitter_timeline\\data\\celeb_output_test/timeline/2022-02-16 12.59.07\n",
+      "Processing handle 1/3\n",
+      "Pulling timeline for handle beyonce.\n",
+      "Successfully retrieved user_id 31239408 for @beyonce.\n",
+      "Collected 19 tweets for handle beyonce\n",
+      "------------------------------\n",
+      "Processing handle 2/3\n",
+      "Pulling timeline for handle justinbeiber.\n",
+      "Failed to get user id for justinbeiber\n",
+      "Failed to pull timeline for handle justinbeiber. Error:  'NoneType' object has no attribute 'id'\n",
+      "Processing handle 3/3\n",
+      "Pulling timeline for handle taylorswift13.\n",
+      "Successfully retrieved user_id 17919972 for @taylorswift13.\n",
+      "Collected 716 tweets for handle taylorswift13\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = pt_api.timelines(user_csv = handle_csv,\n",
+    "                handle_column = 'handle',\n",
+    "                auto_save = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(response.timelines['taylorswift13'].df_tweets)"
    ]
   },
   {
